NEWS for hydroPSO
--------------------------

0.3-2	(under-development)
        o 'lhoat'         : -) parallel capable
                            -) new 'normalise' parameter for the 'control' variable, in order to improve the sampling design when the search space is 
                               not a hypercube
                            -) 'control' argument now allows the following new components: 'REPORT', 'parallel', 'par.nnodes', 'par.pkgs', 'normalise'
                            -) new argument '...' to allow function arguments that are kept constant during the sensitivity analysis.
        o 'pest2hydroPSO' : -) now it handles correctly cases where the fifth row of 'pst.fname' uses tab instead of white spaces as separator 
                               (Thanks to Ramadan Abdel A. !)
        
0.3-1-1	10-May-2013
        o Suggested package 'multicore' (superseded) was replaced by 'parallel'
        o 'hydroPSO: functions from the 'multicore' package were replaced by equivalent from the 'parallel' package (detectCores, mclapply)

0.3-1	10-May-2013
        o new 'SWAT2005.zip' file, with and updated tutorial for calibrating SWAT 2005, compatible with hydroPSO >= 0.3-0   
          The old zip file was renamed to 'SWAT2005_old.zip', which is compatible with hydroPSO <= 0.1-58
          The new 'SWAT2005.zip' file now includes a new 'swat2005.out' binary file, in order to allow running SWAT2005 in GNU/Linux machines
        o new 'MF2005.zip' file, with and updated tutorial for calibrating MODFLOW 2005, compatible with hydroPSO >= 0.3-0   
          The old zip file was renamed to 'MF2005_old.zip', which is compatible with hydroPSO <= 0.1-58    
        o 'lhoat'           : -) fixed bug that led to all parameters have the same Ranking (equal to 0) when 'fn!="hydromod"' (Thanks to Rui Esteves !)
                              -) fixed bug that led to the following error message "object 'model.out.text.fname' not found" when 'write2disk=FALSE'