@@ -1,8 +1,8 @@
 Package: hydroPSO
 Type: Package
 Title: Particle Swarm Optimisation, with focus on Environmental Models
-Version: 0.3-1-3
-Date: 2013-05-16
+Version: 0.3-1-4
+Date: 2013-05-28
 Author: Mauricio Zambrano-Bigiarini [aut, cre], Rodrigo Rojas [ctb]
 Authors@R: c(person("Mauricio", "Zambrano-Bigiarini", email="mzb.devel@gmail.com", role=c("aut","cre")), person("Rodrigo", "Rojas", email="Rodrigo.RojasMujica@gmail.com", role=c("ctb")) )
 Maintainer: Mauricio Zambrano-Bigiarini <mzb.devel@gmail.com>
